# Module-Template

./: CMakeLists.txt  ChangeLog.md  LICENSE  main.cpp  vcpkg.json
add/: CMakeLists.txt  add.cpp
add/add_header/: add.h
cmake/: maths.pc.in  mathsConfig.cmake.in  project_configuration.cmake
maths_core/: CMakeLists.txt  maths.cpp
maths_core/maths_header/: maths.h
status/: CMakeLists.txt  calc_log.hpp  calc_status.h
subtract/: CMakeLists.txt  subtract.cpp
subtract/subtract_header/: subtract.h
tests/: CMakeLists.txt  basic_math.cpp
